--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "https://author-p15404-e146221-cmstg.adobeaemcloud.com/bin/franklin.delivery/adobe-rnd/aem-boilerplate-xwalk/main"
+    url: "https://author-p56818-e741270.adobeaemcloud.com/bin/franklin.delivery/jauriolesces/xwalksite1/main"
     type: "markup"
     suffix: ".html"
